--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Elemento Customizado </title>
+  <title>Elemento Personalizado: Contador</title>
 </head>
 <body>
 
-  <h2>Exemplo simples de elemento customizado</h2>
+  <h2>Exemplo de Elemento Personalizado: Contador de Cliques</h2>
 
-  <!-- Usando o elemento customizado -->
-  <meu-componente></meu-componente>
+  <!-- Usando o elemento personalizado -->
+  <contador-click></contador-click>
+
+  <!-- Importa o JS do componente -->
+  <script src="script.js"></script>
 
 </body>
 </html>
-
-
-
-
